# bandits

./: .gitignore  README.md  pyproject.toml
multi_armed_bandit/: ads.py  agent.py  env.py  testbed.py
notebooks/: ads.ipynb  testbed.ipynb
